tools/crates/vendor/toml_edit/tests/fixtures/invalid/table/redefine-2.stderr
TOML parse error at line 3, column 1
  |
3 | [t1.t2]
  | ^
invalid table header
duplicate key `t2` in table `t1`
